chore: fix openapi & gen ogen
