# service/common-api/docs/api/swagger.yaml
@@ -7,16 +7,16 @@ info:
 servers:
 - url: /api
 paths:
-  /channels:
+  /creators:
     get:
       tags:
-        - Channels
-      summary: Get Channels
-      description: Retrieves all channels based on provided IDs.
+        - Creators
+      summary: Get Creators
+      description: Retrieves all creators based on provided IDs.
       parameters:
       - name: ids
         in: query
-        description: Comma-separated list of channel IDs
+        description: Comma-separated list of creator IDs
         style: form
         explode: false
         schema:
@@ -40,8 +40,21 @@ paths:
               schema:
                 type: object
                 properties:
-                  data:
-                    $ref: '#/components/schemas/ChannelsResponse'
+                  creators:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                          example: "creator1"
+                        name:
+                          type: string
+                          example: "Creator Name 1"
+                        channels:
+                          type: array
+                          items:
+                            $ref: '#/components/schemas/ChannelResponse'
                   pagination:
                     $ref: '#/components/schemas/Pagination'
         "400":
@@ -54,93 +67,16 @@ paths:
           description: Not Found
         "500":
           description: Internal Server Error
-    put:
-      tags:
-        - Channels
-      summary: Update Channels from Youtube
-      description: Updates channels by fetching from Youtube using provided Channel IDs.
-      requestBody:
-        description: Array of Channel IDs
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                ids:
-                  type: array
-                  items:
-                    type: string
-                  description: Array of YouTube channel IDs.
-              example:
-                ids: ["UCiMG6VdScBabPhJ1ZtaVmbw", "UC0g1AE0DOjBYnLhkgoRWN1w"]
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ChannelsResponse'
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      x-codegen-request-body-name: channelIds
-    post:
-      tags:
-        - Channels
-      summary: Create Channels from Youtube
-      description: Creates channels by fetching from Youtube using provided Channel IDs.
-      requestBody:
-        description: Array of Channel IDs
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                ids:
-                  type: array
-                  items:
-                    type: string
-                  description: Array of YouTube channel IDs.
-              example:
-                ids: ["UCiMG6VdScBabPhJ1ZtaVmbw", "UC0g1AE0DOjBYnLhkgoRWN1w"]
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ChannelsResponse'
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      x-codegen-request-body-name: channelIds
-  /channels/{channel_id}/videos:
+  /videos:
     get:
       tags:
         - Videos
-      summary: Get all videos for a specific channel
-      description: Retrieve all videos related to a specific channel
+      summary: Get all videos for a specific creator
+      description: Retrieve all videos related to a specific creator
       parameters:
-      - name: channel_id
-        in: path
-        required: true
-        description: Unique identifier of the channel
+      - name: creator_id
+        in: query
+        description: Unique identifier of the creator
         schema:
           type: string
       - name: ids
@@ -152,13 +88,11 @@ paths:
       - name: start_date
         in: query
         description: Start Date
-        required: true
         schema:
           type: string
       - name: end_date
         in: query
         description: End Date
-        required: true
         schema:
           type: string
       - name: page
@@ -196,15 +130,8 @@ paths:
     put:
       tags:
         - Videos
-      summary: Update videos for a specific channel
-      description: Update videos related to a specific channel based on provided cronType
-      parameters:
-      - name: channel_id
-        in: path
-        required: true
-        description: Unique identifier of the channel
-        schema:
-          type: string
+      summary: Update videos for a specific creator
+      description: Update videos related to a specific creator based on provided cronType
       requestBody:
         description: Type of the cron
         required: true
@@ -238,15 +165,8 @@ paths:
     post:
       tags:
         - Videos
-      summary: Create videos for a specific channel
-      description: Update videos related to a specific channel based on provided cronType
-      parameters:
-      - name: channel_id
-        in: path
-        required: true
-        description: Unique identifier of the channel
-        schema:
-          type: string
+      summary: Create videos for a specific creator
+      description: Update videos related to a specific creator based on provided cronType
       requestBody:
         description: Type of the cron
         required: true
@@ -291,10 +211,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/VideoResponse'
-    ChannelsResponse:
+    CreatorsResponse:
       type: object
       properties:
-        channels:
+        creators:
           type: array
           items:
             $ref: '#/components/schemas/ChannelResponse'
@@ -308,6 +228,10 @@ components:
           $ref: '#/components/schemas/ChannelSnippetResponse'
         statistics:
           $ref: '#/components/schemas/ChannelStatisticsResponse'
+        videos:
+          type: array
+          items:
+            $ref: '#/components/schemas/VideoResponse'
     ChannelSnippetResponse:
       type: object
       properties:
@@ -359,10 +283,10 @@ components:
     VideoResponse:
       type: object
       properties:
-        channelId:
+        creatorId:
           type: string
           example: UCiMG6VdScBabPhJ1ZtaVmbw
-        channelTitle:
+        creatorTitle:
           type: string
           example: 花芽なずな / Nazuna Kaga
         description:
@@ -447,8 +371,8 @@ security:
   - ApiKeyAuth: []
 
 tags:
-  - name: Channels
-    description: Operations related to channels
+  - name: Creators
+    description: Operations related to creators
   - name: Videos
     description: Operations related to videos
 
